<resources>
    <string name="app_name">Practice from android dev</string>
    <string name="happy_birthday_to_someone">Happy Birthday to Someone</string>
    <string name="act_constr_lay">Активити счетчик+тост const lay</string>
    <string name="toast">Say hello</string>
    <string name="count">Count</string>
    <string name="_0">0</string>
    <string name="toast_message">Hello Toast!</string>
    <string name="act_lean_lay">Активити счетчик+тост lean lay</string>
    <string name="zero">zero</string>
    <string name="scroll">Скрол</string>
    <string name="article_title">1.3: Просмотр текста и прокрутки</string>
    <string name="article_subtitle">Article Subtitle</string>
    <string name="article_text">Введите значения для строк article_titleи article_subtitleлибо с выдуманным заголовком и подзаголовком, либо используйте значения в файле strings.xml готового приложения ScrollingText. Сделайте строковые значения однострочным текстом без тегов HTML или нескольких строк.
Введите или скопируйте и вставьте текст для article_textстроки.
Вы можете использовать текст в текстовом файле или использовать текст, предоставленный для article_textстроки в файле strings.xml готового приложения ScrollingText. Единственное требование для этой задачи - текст должен быть достаточно длинным, чтобы он не помещался на экране.

Имейте в виду следующее (см. Пример на рисунке ниже):

Когда вы вводите или вставляете текст в strings.xmlфайл, текстовые строки не переходят на следующую строку - они выходят за правое поле. Это правильное поведение - каждая новая строка текста, начинающаяся с левого поля, представляет собой целый абзац. Если вы хотите, чтобы текст strings.xmlбыл обернут, вы можете нажать Return, чтобы ввести жесткие окончания строк, или сначала отформатировать текст в текстовом редакторе с жесткими окончаниями строк.
Введите \ n, чтобы представить конец строки, и другой \ n, чтобы представить пустую строку. Вам нужно добавить символы конца строки, чтобы абзацы не переходили друг в друга. \ n Запустите приложение. Статья появляется, но пользователь не может прокрутить статью, потому что вы еще не добавили ScrollView(что вы сделаете в следующей задаче). Также обратите внимание, что нажатие на веб-ссылку в настоящее время ничего не делает. Вы также исправите это в следующей задаче. \ n обратную косую черту. Если в вашем тексте есть двойные кавычки, вы должны также экранировать их ( " ). Вы также должны экранировать любые другие символы, не входящие в ASCII. См. Раздел Форматирование и стили в строковых ресурсах для получения дополнительной информации.В последней версии WordPress ссылки можно вставлять еще проще — копируете адрес с ссылкой, набираете на странице или записи текст, который должен стать ссылкой, выделяете его мышкой и нажимаете сочетание клавиш «Ctrl»+»V», к выделенному тексту автоматически привяжется ссылка.

Если поставить курсор мышки в текст, к которому привязаны ссылка, то появится всплывающее окошко с ссылкой и кнопками для удаления ссылки или перехода к редактированию ссылки.

Ниже описаны стандартные действия и дополнительные возможности при размещении ссылок.


Как вставить ссылку в тексте страницы или записи
www.geekbrains.ru
</string>
    <string name="i_am_just_a_button">i am just a button</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="lesson_1">Кнопки для перехода к заданиям из урока 1</string>
    <string name="lesson_2">кнопки для перехода к заданиям урока 2</string>
    <string name="intent">Intent</string>
    <string name="send">send</string>
    <string name="message_receiver">Message Receiver</string>
    <string name="enter_your_massage_here">Enter your massage here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="chuse_text">chuse text</string>
    <string name="title_1">text 1</string>
    <string name="title_2">text 2</string>
    <string name="title_3">text 3</string>
    <string name="text_1">Соотношение терминов «рассказ» и «новелла» не получило однозначной трактовки в российском, а ранее советском литературоведении. Большинству языков различие между этими понятиями вообще неизвестно. Б. В. Томашевский называет рассказ специфически русским синонимом международного термина «новелла»[11]. Другой представитель школы формализма, Б. М. Эйхенбаум, предлагал разводить эти понятия на том основании, что новелла сюжетна, а рассказ — более психологичен и рефлексивен, ближе к бессюжетному очерку. На остросюжетность новеллы указывал ещё Гёте, считавший её предметом «свершившееся неслыханное событие»[12]. При таком толковании новелла и очерк — две противоположные ипостаси рассказа.

На примере творчества О. Генри Эйхенбаум выделял следующие черты новеллы в наиболее чистом, «незамутнённом» виде: краткость, острый сюжет, нейтральный стиль изложения, отсутствие психологизма, неожиданная развязка[13]. Рассказ, в понимании Эйхенбаума, не отличается от новеллы объёмом, но отличается структурой: персонажам или событиям даются развёрнутые психологические характеристики, на первый план выступает изобразительно-словесная фактура.

Разграничение новеллы и рассказа, предложенное Эйхенбаумом, получило в советском литературоведении определённую, хотя и не всеобщую поддержку. Авторов рассказов по-прежнему называют новеллистами, а «совокупность малых по объёму эпических жанров» — новеллистикой[14]. Различение терминов, неизвестное зарубежному литературоведению, кроме того, теряет смысл применительно к экспериментальной прозе XX века (например, к короткой прозе Гертруды Стайн или Сэмюэла Беккета).</string>
    <string name="text_2">До середины XIX века понятия рассказа и повести в России толком не различались. Любая малая повествовательная форма именовалась повестью, любая крупная форма — романом[15][нет в источнике]. Позднее возобладало представление, что повесть отличается от рассказа тем, что в ней сюжет сосредотачивается не на одном центральном событии, а на целом ряде событий, охватывающих значительнейшую часть жизни героя, а часто и нескольких героев. Повесть более спокойна и нетороплива, чем рассказ или новелла[16].

Принято считать, что отдельной новелле в целом не свойственны богатство художественных красок, изобилие интриг и переплетений в событиях — в отличие от повести[источник не указан 2245 дней] или романа, которые могут описывать множество конфликтов и широкий круг разнообразных проблем и действий. В то же время Х. Л. Борхес указывал, что после новеллистической революции рубежа XIX и XX вв. рассказ в состоянии передать всё то же, что роман, при этом не требует от читателя избыточных затрат времени и внимания[17].

Для Эдгара По новелла — это вымышленная история, которая может быть прочитана за один присест; для Герберта Уэллса — менее чем за час[18]. Тем не менее разграничение рассказа и иных «малых форм» от романа по критерию объёма в значительной степени условно. Так, к примеру, «Один день Ивана Денисовича» принято определять как рассказ (день из жизни одного героя), хотя по протяжённости этот текст ближе к повести. Налицо и другие признаки романа: множество второстепенных персонажей и масштабность рассматриваемой проблемы. И напротив, небольшие по объёму произведения Рене Шатобриана или Паоло Коэльо с любовными переплетениями и интригами считаются романами[источник не указан 1619 дней].

Некоторые рассказы А. П. Чехова при малом объёме представляют собой своеобразные мини-романы[19]. Например, в хрестоматийном рассказе «Ионыч» автор «сумел без потерь сгустить грандиозный объём всей человеческой жизни, во всей её трагикомической полноте на 18 страницах текста»[20]. В плане сжатия материала едва ли не дальше всех классиков продвинулся Лев Толстой: в коротком рассказе «Алёша Горшок» целая человеческая жизнь рассказана всего на нескольких страницах[21].</string>
    <string name="text_3">После смерти Гофмана в 1822 году новелла уходит с авансцены немецкой литературы; одновременно с тем начинается её бурное развитие в США и во Франции. Творчество французских последователей Гофмана принято обозначать термином fantastique («фантастика»), что подчёркивает нарочитое презрение авторов к эстетике реализма. У Теофиля Готье («Кофейник», 1831) неправдоподобие описываемых событий зачастую оттенено ироническим тоном автора, у Нодье и Нерваля — вторжением в повествование поэтической (лирической, элегической) стихии. Последовательное стирание границ между сном и явью приводит в случае с Нодье и Нервалем к «деновеллизации». Готье также настаивает на том, что сон — это вторая жизнь, причём его фантастика обращена в прошлое и насквозь эстетизирована (её вмещают ковры, портреты и антиквариат)[37][41].

Наибольшее развитие во Франции получила психологическая новелла клейстовского типа[42] — сухая, строгая, подчёркнуто сдержанная хроника драматических страстей, которые бурлят в душах горячих южан («Маттео Фальконе» П. Мериме, «Ванина Ванини» Стендаля, оба 1829), служителей муз («Неведомый шедевр» О. Бальзака, 1832), светских молодых людей («Этрусская ваза» Мериме, 1830), разочарованных в жизни офицеров («Красная печать» А. де Виньи, 1833). Для обозначения нового жанра вернулся в обиход старинный термин «новелла», напоминавший о ренессансной традиции. Наиболее последовательно работал с малой формой Проспер Мериме (1803-70), почти всё творчество которого состоит из новелл. Его влечёт диковатая естественность нравов цыган и других экзотических народов, завораживают роковые ошибки, которые имеют свойство разъясняться слишком поздно[37]. Действие, как правило, разворачивается стремительно; один сюжет нередко прикрывает другой.</string>
    <string name="hello">Hello!</string>
    <string name="lifecycle_activity">lefecycle activity</string>
    <string name="shopping_list">shopping list</string>
    <string name="add_item">Add item</string>
    <string name="milk">milk</string>
    <string name="bread">bread</string>
    <string name="egg">egg</string>
    <string name="bear">bear</string>
    <string name="cheese">cheese</string>
    <string name="potato">potato</string>
    <string name="cucumber">cucumber</string>
    <string name="tomato">tomato</string>
    <string name="salt">salt</string>
    <string name="spam">spam</string>
    <string name="counter_android_hw_l2_p3">counter android HW (L2, p3)</string>
    <string name="implicit_intents">Implicit intents</string>
    <string name="edittext_uri">http://developer.android.com</string>
    <string name="button_uri">Open Website</string>

    <string name="edittext_loc">Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>

    <string name="edittext_share">\'Twas brillig and the slithy toves</string>
    <string name="button_share">Share This Text</string>
    <string name="share_text_with">\"Share this text with: \"</string>
    <string name="take_a_picture">take a picture</string>
</resources>