<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Урок Android 01.2 Часть A: Ваш первый интерактивный интерфейс-->
    <!--Задание: Добавьте атрибут и обработчик onClick к каждой кнопке-->

    <Button
        android:id="@+id/button_toast"
        android:layout_width="@dimen/width_88"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:onClick="showToast"
        android:text="@string/toast"
        android:textColor="@color/black"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_32"
        android:backgroundTint="@color/purple_200"
        android:onClick="countUp"
        android:text="@string/count"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/show_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zero" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:backgroundTint="@color/gray"
        android:onClick="zero"
        android:text="@string/zero"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/button_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_toast" />

    <TextView
        android:id="@+id/show_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:background="@color/yellow"
        android:gravity="center"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_zero"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>